[package]
name = "fastuuid"
version = "0.3.0"
authors = ["pradovic <petar.radovic@gmail.com>"]
description = "Fast and lightweight generation of 192-bit uuids with support for 128-bit strings"
repository = "https://github.com/pradovic/fastuuid-rs"
keywords = ["guid", "unique", "uuid", "quessable"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
edition = "2018"


[lib]
name = "fastuuid"

[dependencies]
rand = "0.7.0"
atomic = "0.4.5"
faster-hex = "0.3.1"


[dev-dependencies]
criterion = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }

[[bench]]
name = "fastuuid_bench"
harness = false



